--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
           </div>
           <div class="flex flex-col sm:flex-row items-center justify-center mt-16">
             <p class="text-xl mb-3 sm:mr-6 sm:mb-0">Want my skill sets for your project ? </p>
-            <a class="flex text-white bg-teal-500 border-0 py-2 px-8 focus:outline-none hover:bg-teal-600 rounded text-lg" href="#contact">Hire Me<i class="fas fa-paper-plane ml-3 mt-1"></i></a>
+            <a class="flex text-white bg-teal-500 border-0 py-2 px-8 focus:outline-none hover:bg-teal-600 rounded-full sm:rounded text-lg" href="#contact">Hire Me<i class="fas fa-paper-plane ml-3 mt-1"></i></a>
           </div>
         </div>
       </section>
@@ -342,7 +342,7 @@
               </div>
               <div class="sm:w-2/3 sm:pl-8 sm:py-8 sm:border-l border-gray-800 sm:border-t-0 border-t mt-4 pt-4 sm:mt-0 text-center sm:text-left">
                 <p class="leading-relaxed text-lg mb-4">Meggings portland fingerstache lyft, post-ironic fixie man bun banh mi umami everyday carry hexagon locavore direct trade art party. Locavore small batch listicle gastropub farm-to-table lumbersexual salvia messenger bag. Coloring book flannel truffaut craft beer drinking vinegar sartorial, disrupt fashion axe normcore meh butcher. Portland 90's scenester vexillologist forage post-ironic asymmetrical, chartreuse disrupt butcher paleo intelligentsia pabst before they sold out four loko. 3 wolf moon brooklyn.</p>
-                <p class="text-white text-xl items-center"><i class="fas fa-chevron-right text-teal-500"></i> Get my <a class="text-teal-500 inline-flex items-center border-2 border-teal-500 rounded px-3 hover:border-teal-300 hover:text-teal-300 href="./doc/.pdf"> Resume<i class="far fa-file-alt ml-2"></i></a></p>
+                <p class="text-white text-lg items-center"><i class="fas fa-chevron-right text-teal-500"></i> Get my <a class=" ml-2 text-teal-500 inline-flex items-center border-2 border-teal-500 rounded-full md:rounded px-3 hover:border-teal-300 hover:text-teal-300" href="./doc/.pdf"> Resume<i class="far fa-file-alt ml-2"></i></a></p>
               </div>
             </div>
           </div>
@@ -351,41 +351,41 @@
 
       <section id="contact" class="text-gray-500 bg-gray-900 body-font relative">
         <div class="container px-5 py-24 mx-auto flex sm:flex-no-wrap flex-wrap">
-          <div class="lg:w-2/3 md:w-1/2 bg-gray-900 rounded-lg overflow-hidden sm:mr-10 p-10 flex items-end justify-start relative">
+          <div class="lg:w-2/3 md:w-1/2v bg-gray-900 rounded-lg overflow-hidden sm:mr-10 p-10 flex items-end justify-around relative">
             <iframe width="100%" height="100%" title="map" class="absolute inset-0" frameborder="0" marginheight="0" marginwidth="0" scrolling="no" src="https://maps.google.com/maps?width=100%&height=600&hl=en&q=%C4%B0zmir+(My%20Business%20Name)&ie=UTF8&t=&z=14&iwloc=B&output=embed" style="filter: grayscale(1) contrast(1.2) opacity(0.16);"></iframe>
-            <div class="bg-gray-900 relative flex flex-wrap py-6">
-              <div class="lg:w-1/2 px-6">
+            <div class="bg-gray-900 relative flex flex-wrap rounded py-6 w-full">
+              <div class="lg:w-1/2 px-6 break-words w-5/6">
                 <h2 class="title-font font-medium text-white tracking-widest text-sm">ADDRESS</h2>
-                <p class="leading-relaxed">Photo booth tattooed prism, portland taiyaki hoodie neutra typewriter</p>
+                <p class="leading-relaxed">Sewli Telinipara, Debpukur, PIN-700121, 24 Parganas (N), WB, India</p>
               </div>
-              <div class="lg:w-1/2 px-6 mt-4 lg:mt-0">
+              <div class="lg:w-1/2 px-6 mt-4 lg:mt-0 truncate w-5/6">
                 <h2 class="title-font font-medium text-white tracking-widest text-sm">EMAIL</h2>
-                <a class="text-teal-500 leading-relaxed">example@email.com</a>
+                <a class="text-teal-500 leading-relaxed" href="mailto:pritamhalder05062000@gmail.com">pritamhalder05062000@gmail.com</a>
                 <h2 class="title-font font-medium text-white tracking-widest text-sm mt-4">PHONE</h2>
-                <p class="leading-relaxed">123-456-7890</p>
+                <p class="leading-relaxed">+91 9874807740</p>
               </div>
             </div>
           </div>
           <div class="lg:w-1/3 md:w-1/2 flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0">
-            <h2 class="text-white text-lg mb-1 font-medium title-font">Feedback</h2>
-            <p class="leading-relaxed mb-5 text-gray-600">Post-ironic portland shabby chic echo park, banjo fashion axe</p>
+            <h2 class="text-white text-3xl mb-1 font-medium title-font">SEND <span class="text-teal-500 text-3xl mb-1 font-medium title-font">MESSEGE</span></h2>
+            <p class="leading-relaxed mb-5 text-gray-600">Loved my work ? Then find out what I can do for you by dropping a messege :)</p>
             <input class="bg-gray-800 rounded border border-gray-700 focus:outline-none focus:border-teal-500 text-base text-white px-4 py-2 mb-4" placeholder="Name" type="text">
             <input class="bg-gray-800 rounded border border-gray-700 focus:outline-none focus:border-teal-500 text-base text-white px-4 py-2 mb-4" placeholder="Email" type="email">
             <textarea class="bg-gray-800 rounded border border-gray-700 focus:outline-none h-32 focus:border-teal-500 text-base text-white px-4 py-2 mb-4 resize-none" placeholder="Message"></textarea>
-            <button class="text-white bg-teal-500 border-0 py-2 px-6 focus:outline-none hover:bg-teal-600 rounded text-lg">Button</button>
-            <p class="text-xs text-gray-500 mt-3">Chicharrones blog helvetica normcore iceland tousled brook viral artisan.</p>
+            <button class="text-white bg-teal-500 border-0 py-2 px-6 focus:outline-none hover:bg-teal-600 rounded text-lg">SEND <i class="fas fa-paper-plane ml-3"></i></button>
+            <p class="text-xs text-gray-500 mt-3">Sometimes later becomes never . . .</p>
           </div>
         </div>
       </section>
 
       <footer class="text-gray-500 body-font">
-        <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
+        <div class="container px-5 py-6 mx-auto flex items-center sm:flex-row flex-col">
           <a class="flex title-font font-medium items-center md:justify-start justify-center text-white" href="http://linkedin.com/">
             <i class="fab fa-500px fa-2x text-teal-500"></i>
             <span class="ml-3 text-xl">Pritam Halder</span>
           </a>
-          <p class="text-sm text-gray-600 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0 mt-4">&copy; poseidon-code 2020</p>
-          <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
+          <p class="text-sm text-gray-600 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0 mt-2">&copy; poseidon-code 2020</p>
+          <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
             <a class="text-gray-600" href="http://facebook.com/pritamhalder0506"><i class="fab fa-facebook-f"></i></a>
             <a class="ml-3 text-gray-600" href="http://github.com/poseidon-code"><i class="fab fa-github"></i></a>
             <a class="ml-3 text-gray-600" href="http://instagram.com/pritam.poseidon"><i class="fab fa-instagram"></i></a>
